fixed the first link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="scifiUI">
                 <h1>Menu</h1>
                 <ul>
-                  <li><a href="https://10001flyingpigs.github.io/websitething/.asp">Challenges</a></li>
+                  <li><a href="https://10001flyingpigs.github.io/websitething/">Challenges</a></li>
                   <li><a href="">Random</a></li>
                   <li><a href="">Contact</a></li>
                 </ul>
