--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>portfolio</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
